jupyter notebook changes
Signed-off-by: Kreuter Daniel Christopher (CR/APM2) <DanielChristopher.Kreuter@de.bosch.com>

--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -370,7 +370,7 @@
     "\"\"\" Scale with \"\"\"\n",
     "ampl = pd.DataFrame(data = data_finite.index.get_level_values('range').mid.values, columns = [\"ampl\"] ,index = data_finite[\"frequency\"].values)\n",
     "s_vm_scaled = pd.DataFrame(data = ampl.values*s_vm.transpose().values,index = ampl.index,columns = s_vm.index)\n",
-    "display(s_vm_scaled)\n",
+    "#display(s_vm_scaled)\n",
     "#data_finite = data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]][::-1]"
    ]
   },
