CREATE-3271: Started material data refactor

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -87,7 +87,8 @@
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
-    "import warnings"
+    "import warnings\n",
+    "import pdb"
    ]
   },
   {
@@ -178,7 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "w = data_head_tail()\n",
+    "w = wwidget.data_head_tail()\n",
     "print('Choose whether to visualize the head or tail of the data found in excel:')\n",
     "w"
    ]
@@ -285,7 +286,7 @@
    },
    "outputs": [],
    "source": [
-    "tab = WL_param()\n",
+    "tab = wwidget.WL_param()\n",
     "display(tab)"
    ]
   },
@@ -302,7 +303,7 @@
    },
    "outputs": [],
    "source": [
-    "fixed_param, estim_param =  WL_param_display(tab)"
+    "fixed_param, estim_param =  wwidget.WL_param_display(tab)"
    ]
   },
   {
@@ -331,7 +332,9 @@
    "outputs": [],
    "source": [
     "warnings.filterwarnings('ignore')\n",
-    "WC_data = WoehlerCurve(data, ld_cyc_lim, fixed_param, estim_param)"
+    "#pdb.set_trace()\n",
+    "WC_data = WoehlerCurve(data, ld_cyc_lim, fixed_param, estim_param)\n",
+    "WC_data.calc_woehler_curve_parameters()"
    ]
   },
   {
@@ -364,7 +367,7 @@
     "estim_param.update(WC_data.Mali_5p_result)\n",
     "all(map(estim_param.pop, fixed_param))\n",
     "\n",
-    "results_mali_probit(WC_data, fixed_param)"
+    "wwidget.results_mali_probit(WC_data, fixed_param)"
    ]
   },
   {
@@ -468,7 +471,7 @@
    },
    "outputs": [],
    "source": [
-    "w4 = results_visual()\n",
+    "w4 = wwidget.results_visual()\n",
     "print('Choose a plot type and execute the following cell to visualize the results:')\n",
     "w4"
    ]
@@ -502,7 +505,7 @@
     "    print(\"Warning:\\n\")\n",
     "    print(\"Not enough load levels in the infinite-life zone for plotting the probability net\")\n",
     "else:\n",
-    "    _ = PlotWoehlerCurve(WC_data, w4.value, 'Mali', amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
+    "    PlotWC = PlotWoehlerCurve(WC_data, w4.value, 'Mali', amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
    ]
   },
   {
@@ -533,7 +536,7 @@
    "outputs": [],
    "source": [
     "k_1 = WC_data.Mali_5p_result['k_1']\n",
-    "w5 = inf_plot(WC_data, k_1)\n",
+    "w5 = wwidget.inf_plot(WC_data, k_1)\n",
     "print('Choose a value for k_2:')\n",
     "w5"
    ]
@@ -565,7 +568,7 @@
    },
    "outputs": [],
    "source": [
-    "w2 = method_mali_probit()\n",
+    "w2 = wwidget.method_mali_probit()\n",
     "w2"
    ]
   },
@@ -587,8 +590,8 @@
     "    print(\"Not enough load levels in the infinite zone for the probit method, please choose the Mali\")\n",
     "    print(\"\\nparameters for visualization\")\n",
     "else:\n",
-    "    SD50, ND50, TS = PlotWoehlerCurve.runout_zone_method(WC_data, method=w2.value, slope_chosen=w5.value)\n",
-    "    _ = PlotWoehlerCurve.final_curve_plot(WC_data, SD50, ND50, TS, w5.value, w2.value, amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
+    "    SD50, ND50, TS = PlotWC.runout_zone_method(WC_data, method=w2.value, slope_chosen=w5.value)\n",
+    "    _ = PlotWC.final_curve_plot(WC_data, SD50, ND50, TS, w5.value, w2.value, amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
    ]
   },
   {
@@ -618,13 +621,13 @@
    },
    "outputs": [],
    "source": [
-    "sum_lolli = mali_sum_lolli(WC_data.Mali_5p_result['SD_50'], WC_data.Mali_5p_result['1/TS'], \n",
-    "                           WC_data.Mali_5p_result['k_1'], WC_data.Mali_5p_result['ND_50'], \n",
-    "                           WC_data.Mali_5p_result['1/TN'], WC_data.fractures,\n",
-    "                           WC_data.zone_inf, WC_data.load_cycle_limit)\n",
+    "sum_lolli = WC_data.mali_sum_lolli(WC_data.Mali_5p_result['SD_50'], WC_data.Mali_5p_result['1/TS'], \n",
+    "                                        WC_data.Mali_5p_result['k_1'], WC_data.Mali_5p_result['ND_50'], \n",
+    "                                        WC_data.Mali_5p_result['1/TN'], WC_data.fractures,\n",
+    "                                        WC_data.zone_inf, WC_data.load_cycle_limit)\n",
     "\n",
     "n_data_pt = data.shape[0]\n",
-    "bic = bayes_inf_crit(-sum_lolli, WC_data.p_opt, n_data_pt)\n",
+    "bic = WC_data.bayes_inf_crit(sum_lolli, WC_data.p_opt, n_data_pt)\n",
     "print('\\nBIC =',bic)"
    ]
   },
