More ux friendly

--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -24,7 +24,10 @@
     "from pylife.strength import failure_probability as fp\n",
     "#from __future__ import print_function\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets\n",
+    "import io\n",
+    "from IPython.display import HTML\n",
+    "import base64 "
    ]
   },
   {
@@ -44,10 +47,7 @@
     "files = [\"IIS0042_DAT_2017LK065HU004_000100_0206_ESP_FA_arf_0004163.dat.csv\",\n",
     "         \"IIS0042_DAT_2017LK065HU004_000100_0206_ALC7_abf_0004587.dat.csv\",\n",
     "         \"IIS0042_DAT_2017LK065HU004_000100_0205_hfc2_abf_0003880.dat.csv\"]\n",
-    "data_loc = '\\\\\\\\fe00fs76.de.bosch.com\\\\SP17_Extern$\\\\SP17-010\\\\TSIPRAS\\\\MeasuredData\\\\Messdaten_ESP_Maneuver\\\\'\n",
-    "input_data = []\n",
-    "for file_act in files:\n",
-    "    input_data.append(pd.read_csv(data_loc + file_act,sep = ';',low_memory=False, dtype = np.float32))"
+    "data_loc = '\\\\\\\\fe00fs76.de.bosch.com\\\\SP17_Extern$\\\\SP17-010\\\\TSIPRAS\\\\MeasuredData\\\\Messdaten_ESP_Maneuver\\\\'"
    ]
   },
   {
@@ -56,12 +56,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Resampling \"\"\"\n",
-    "samplerateNew = 40000\n",
-    "time_column = 't'\n",
+    "input_data = []\n",
+    "for upload in files:\n",
+    "    print(upload + \" imported succesfully\")\n",
+    "    data_akt = pd.read_csv(data_loc + upload, sep = \",\")\n",
+    "    if len(data_akt.columns) == 1:\n",
+    "        print ('please use \",\" as seperator next time')\n",
+    "        data_akt = pd.read_csv(data_loc + upload, sep = \";\")\n",
+    "    input_data.append(data_akt)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resampling ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_resample = widgets.FloatText(value = 40e3,min=1,max=100e3,step=10,\n",
+    "    description='Resampling frequency [Hz]',\n",
+    "    disabled=False,readout=True,readout_format='d')\n",
+    "display(f_resample)\n",
+    "# select time column\n",
+    "timeColumn = widgets.Dropdown(options = data_akt.columns)\n",
+    "display(timeColumn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f_resample.value)\n",
+    "print(timeColumn.value)\n",
     "meas_resample = []\n",
     "for file_act in input_data:\n",
-    "    meas_resample.append(ts.TimeSignalPrep(file_act).resample_acc(time_column,samplerateNew))"
+    "    meas_resample.append(ts.TimeSignalPrep(file_act).resample_acc(timeColumn.value,f_resample.value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"select channel to plot\")\n",
+    "plotChan = widgets.Dropdown(options = data_akt.columns)\n",
+    "display(plotChan)"
    ]
   },
   {
@@ -75,9 +123,15 @@
     "fig.suptitle('Resampled input data')\n",
     "ii = 0\n",
     "for df_act in meas_resample:\n",
-    "    ax[ii].plot(df_act['t'], df_act['HU_P1_A1S_155892_X'])\n",
-    "    ii += 1\n",
-    "print(df_act.columns)    "
+    "    ax[ii].plot(df_act['t'], df_act[plotChan.value])\n",
+    "    ii += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtering "
    ]
   },
   {
@@ -86,14 +140,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Butterworth Filter \"\"\"\n",
     "bandpass = []\n",
     "for df_act in meas_resample:\n",
-    "    bandpassDF = df_act[[time_column]]\n",
-    "    \n",
-    "    for col_act in df_act.iloc[:,1:].columns:\n",
-    "        bandpassDF[col_act] = ts.TimeSignalPrep(df_act.loc[:,col_act]).butter_bandpass(100,5e3,samplerateNew,5)\n",
+    "    bandpassDF = df_act[[timeColumn.value]]\n",
+    "    for col_act in df_act.drop([timeColumn.value],axis = 'columns').columns:\n",
+    "        bandpassDF[col_act] = ts.TimeSignalPrep(df_act.loc[:,col_act]).butter_bandpass(f_min.value,f_max.value,f_resample.value,5)\n",
     "    bandpass.append(bandpassDF)            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"select channel to for running stats\")\n",
+    "runChan = widgets.Dropdown(options = df_act.drop([timeColumn.value],axis = 'columns').columns)\n",
+    "display(runChan)\n",
+    "print(\" Running statistics method\")\n",
+    "method_choice = widgets.Dropdown(options = ['rms','max','min','abs'])\n",
+    "display(method_choice)\n",
+    "\n",
+    "paraRunStats = ['window_length', 'buffer_overlap', 'limit']\n",
+    "values = [800,0.1,0.1]\n",
+    "child = [widgets.FloatText(description=name) for name in paraRunStats]\n",
+    "tab = widgets.Tab()\n",
+    "tab.children = child\n",
+    "for i in range(len(child)):\n",
+    "    tab.set_title(i, paraRunStats[i])\n",
+    "    tab.children[i].value = values[i]\n",
+    "\n",
+    "tab"
    ]
   },
   {
@@ -105,10 +189,10 @@
     "\"\"\" Running statistics to drop out zero values \"\"\"\n",
     "cleaned = []\n",
     "for df_act in bandpass:\n",
-    "    cleaned_df = ts.TimeSignalPrep(df_act).running_stats_filt(col = 'HU_P1_A1S_155892_X',\n",
-    "                            window_length = 8000,buffer_overlap = 0.1,limit = 0.25,method = 'rms')\n",
-    "    cleaned_df[time_column] =  np.linspace(0,len(cleaned_df)/samplerateNew,len(cleaned_df)+1)[:-1]          \n",
-    "    cleaned.append(cleaned_df)\n"
+    "    cleaned_df = ts.TimeSignalPrep(df_act).running_stats_filt(col = runChan.value,\n",
+    "                            window_length = 8000,buffer_overlap = 0.1,limit = 0.1,method = method_choice.value)\n",
+    "    cleaned_df[timeColumn.value] =  np.linspace(0,len(cleaned_df)/f_resample.value,len(cleaned_df)+1)[:-1]          \n",
+    "    cleaned.append(cleaned_df)"
    ]
   },
   {
@@ -437,5 +521,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
