--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -58,12 +58,12 @@
    "source": [
     "input_data = []\n",
     "for upload in files:\n",
-    "    print(upload + \" imported succesfully\")\n",
     "    data_akt = pd.read_csv(data_loc + upload, sep = \",\")\n",
     "    if len(data_akt.columns) == 1:\n",
     "        print ('please use \",\" as seperator next time')\n",
     "        data_akt = pd.read_csv(data_loc + upload, sep = \";\")\n",
-    "    input_data.append(data_akt)\n"
+    "    input_data.append(data_akt)\n",
+    "    print(upload + \" imported succesfully\")"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "outputs": [],
    "source": [
     "print(\"select channel to plot\")\n",
-    "plotChan = widgets.Dropdown(options = data_akt.columns)\n",
+    "plotChan = widgets.Dropdown(options = df_act.drop([timeColumn.value],axis = 'columns').columns)\n",
     "display(plotChan)"
    ]
   },
@@ -190,7 +190,7 @@
     "cleaned = []\n",
     "for df_act in bandpass:\n",
     "    cleaned_df = ts.TimeSignalPrep(df_act).running_stats_filt(col = runChan.value,\n",
-    "                            window_length = 8000,buffer_overlap = 0.1,limit = 0.1,method = method_choice.value)\n",
+    "                            window_length = int(tab.children[0].value),buffer_overlap = int(tab.children[1].value),limit = tab.children[2].value,method = method_choice.value)\n",
     "    cleaned_df[timeColumn.value] =  np.linspace(0,len(cleaned_df)/f_resample.value,len(cleaned_df)+1)[:-1]          \n",
     "    cleaned.append(cleaned_df)"
    ]
@@ -341,6 +341,215 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
+    "fig, ax = plt.subplots(len(meas_resample))\n",
+    "fig.suptitle('Cleaned input data')\n",
+    "ii = 0\n",
+    "for df_act in cleaned:\n",
+    "    ax[ii].plot(df_act['t'], df_act['PCB_P93_A1S_5116_Z'])\n",
+    "    ii += 1    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rainflow ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfcChan = widgets.Dropdown(options = df_act.drop([timeColumn.value],axis = 'columns').columns)\n",
+    "display(rfcChan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib notebook\n",
+    "rainflow = []\n",
+    "for df_act in cleaned:\n",
+    "    rfc = RainflowCounterFKM().process(df_act[rfcChan.value].values)\n",
+    "    rfm = rfc.get_rainflow_matrix_frame(64)\n",
+    "    rainflow.append(rfm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib notebook\n",
+    "fig, ax = plt.subplots(1,len(rainflow))\n",
+    "fig.suptitle('Rainflow of Channel ' + rfcChan.value)\n",
+    "ii = 0\n",
+    "for rf_act in rainflow:\n",
+    "    froms = rf_act.index.get_level_values('from').mid\n",
+    "    tos = rf_act.index.get_level_values('to').mid\n",
+    "    ax[ii].set_xlabel('From')\n",
+    "    ax[ii].set_ylabel('To')\n",
+    "    ax[ii].imshow(np.flipud(np.log10(rf_act.values.reshape(rf_act.index.levshape).T)), extent=[froms.min(), froms.max(), tos.min(), tos.max()])\n",
+    "    ii += 1    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Meanstress transform ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meanstress_para = ['M', 'M2', 'R_Goal']\n",
+    "values = [0.3,0.2,-1]\n",
+    "child = [widgets.FloatText(description=name) for name in meanstress_para]\n",
+    "tab_mean = widgets.Tab()\n",
+    "tab_mean.children = child\n",
+    "for i in range(len(child)):\n",
+    "    tab_mean.set_title(i, meanstress_para[i])\n",
+    "    tab_mean.children[i].value = values[i]\n",
+    "\n",
+    "tab_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformed = []\n",
+    "for rf_act in rainflow:\n",
+    "    transformed.append(rf_act.meanstress_hist.FKM_goodman(pd.Series({'M': tab_mean.children[0].value, \n",
+    "                                                                     'M2': tab_mean.children[1].value})\n",
+    "                                                          , R_goal = tab_mean.children[2].value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Repeating factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "child = [widgets.FloatText(description=name) for name in files]\n",
+    "tab_repeat = widgets.Tab()\n",
+    "tab_repeat.children = child\n",
+    "for i in range(len(child)):\n",
+    "    tab_repeat.set_title(i, files[i])\n",
+    "    tab_repeat.children[i].value = 1\n",
+    "\n",
+    "tab_repeat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ii in range(3): \n",
+    "    transformed[ii] = transformed[ii]*tab_repeat.children[ii].value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nominal stress approach ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Material parameters ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat = WL_param()\n",
+    "display(mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_para, _ = WL_param_display(mat)\n",
+    "sn_curve_parameters = {\n",
+    "    \"N_D\": mat_para['ND_50'],\n",
+    "    \"k\": mat_para['k_1'],\n",
+    "    \"sigma_ak\": mat_para['SD_50']\n",
+    "}\n",
+    "mat_para['1/TS'] = mat_para['1/TN']**(1/mat_para['k_1'])\n",
+    "print(mat_para)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Damage Calculation ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SNmethod = widgets.Dropdown(options = ['Miner Elementar','Miner Haibach','Miner original'])\n",
+    "display(SNmethod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "damage_calc = MinerElementar(**sn_curve_parameters)\n",
+    "data_act = transformed[0]\n",
+    "range_mid = data_act.index.get_level_values('range').mid.values\n",
+    "data_finite = data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]][::-1]\n",
+    "stress_finite = data_finite.index.get_level_values('range').mid.values\n",
+    "N = damage_calc.sn_curve.calc_N(stress_finite)\n",
+    "d = np.sum(data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]].values/N)\n",
+    "print(\"\\033[1m  Total Damage: %.2f  \\033[0m\" %d) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib notebook\n",
     "class wc_data:\n",
     "    def __init__(self, k, TN,loads_max):\n",
     "        self.k = k\n",
@@ -349,7 +558,7 @@
     "SRI = mat_para['SD_50']*(mat_para['ND_50']**(1/mat_para['k_1']))\n",
     "wc = wc_data(mat_para['k_1'],mat_para['1/TN'],SRI) \n",
     "_ = PlotWoehlerCurve.final_curve_plot(wc, mat_para['SD_50'], mat_para['ND_50'],mat_para['1/TS'],0, \n",
-    "                                      None,\"Amplitude\",\"Load\", \" \", (1,1e8), (1e2,3e3), 0)\n",
+    "                                      None,\"Amplitude\",\"Load\", \" \", (1,1e8), (1e1,1e3), 0)\n",
     "plt.barh(stress_finite,np.cumsum(data_finite.values), height = data_finite.index.get_level_values('range').length.min())"
    ]
   },
