Jupyter notebook stuff

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -119,6 +119,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(file_name.value.items())[1]['content']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "ein.tags": "worksheet-0",
