Starting harmonization of symbols for materialdata and miner
Signed-off-by: Kreuter Daniel Christopher (CR/APM2) <DanielChristopher.Kreuter@de.bosch.com>

--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -108,7 +108,7 @@
    "outputs": [],
    "source": [
     "print(\"select channel to plot\")\n",
-    "plotChan = widgets.Dropdown(options = df_act.drop([timeColumn.value],axis = 'columns').columns)\n",
+    "plotChan = widgets.Dropdown(options = file_act.drop([timeColumn.value],axis = 'columns').columns)\n",
     "display(plotChan)"
    ]
   },
@@ -501,13 +501,10 @@
    "outputs": [],
    "source": [
     "mat_para, _ = WL_param_display(mat)\n",
-    "sn_curve_parameters = {\n",
-    "    \"N_D\": mat_para['ND_50'],\n",
-    "    \"k\": mat_para['k_1'],\n",
-    "    \"sigma_ak\": mat_para['SD_50']\n",
-    "}\n",
-    "mat_para['1/TS'] = mat_para['1/TN']**(1/mat_para['k_1'])\n",
-    "print(mat_para)"
+    "sn_curve_parameters =  {key:mat_para[key] for key in mat_para.keys() - {'TN_inv', 'TS_inv'}} \n",
+    "mat_para['TS_inv'] = mat_para['TN_inv']**(1/mat_para['k_1'])\n",
+    "print(mat_para)\n",
+    "print(sn_curve_parameters)"
    ]
   },
   {
@@ -536,10 +533,10 @@
     "damage_calc = MinerElementar(**sn_curve_parameters)\n",
     "data_act = transformed[0]\n",
     "range_mid = data_act.index.get_level_values('range').mid.values\n",
-    "data_finite = data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]][::-1]\n",
+    "data_finite = data_act[range_mid > sn_curve_parameters['SD_50']][::-1]\n",
     "stress_finite = data_finite.index.get_level_values('range').mid.values\n",
     "N = damage_calc.sn_curve.calc_N(stress_finite)\n",
-    "d = np.sum(data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]].values/N)\n",
+    "d = np.sum(data_act[range_mid > sn_curve_parameters['SD_50']].values/N)\n",
     "print(\"\\033[1m  Total Damage: %.2f  \\033[0m\" %d) "
    ]
   },
@@ -556,8 +553,8 @@
     "        self.TN = TN\n",
     "        self.loads_max = loads_max\n",
     "SRI = mat_para['SD_50']*(mat_para['ND_50']**(1/mat_para['k_1']))\n",
-    "wc = wc_data(mat_para['k_1'],mat_para['1/TN'],SRI) \n",
-    "_ = PlotWoehlerCurve.final_curve_plot(wc, mat_para['SD_50'], mat_para['ND_50'],mat_para['1/TS'],0, \n",
+    "wc = wc_data(mat_para['k_1'],mat_para['TN_inv'],SRI) \n",
+    "_ = PlotWoehlerCurve.final_curve_plot(wc, mat_para['SD_50'], mat_para['ND_50'],mat_para['TS_inv'],0, \n",
     "                                      None,\"Amplitude\",\"Load\", \" \", (1,1e8), (1e1,1e3), 0)\n",
     "plt.barh(stress_finite,np.cumsum(data_finite.values), height = data_finite.index.get_level_values('range').length.min())"
    ]
@@ -584,7 +581,7 @@
    "source": [
     "%matplotlib notebook\n",
     "D50 = 0.3\n",
-    "mat_std = np.log10(mat_para['1/TN'])/2.5631031311\n",
+    "mat_std = np.log10(mat_para['TN_inv'])/2.5631031311\n",
     "dmin = d/10\n",
     "di = np.linspace(dmin,50*d,1000)\n",
     "failprob = fp.FailureProbability(D50,mat_std).pf_simple_load(di)\n",
