Preparing LifetimeCalc for nominal stress notebook, adapt SN notebook

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(file_name.value.items())[1]['content']"
+    "file_name = 'woehler-test-data_withRunOutsColumn.csv'"
    ]
   },
   {
@@ -136,7 +136,7 @@
     }
    },
    "source": [
-    "##### Transforming data in excel to python arrays"
+    "##### Transforming data in csv to python arrays"
    ]
   },
   {
