create_3271: Separated different creation of different type of curves
Signed-off-by: Gyongyver Kiss <gyongyver.kiss@hu.bosch.com>

--- a/demos/bayes_multi_simulation.ipynb
+++ b/demos/bayes_multi_simulation.ipynb
@@ -50,6 +50,7 @@
     "\n",
     "from pylife.materialdata.woehler.analyzer import *\n",
     "from pylife.materialdata.woehler.bayes_analyzer import *\n",
+    "from pylife.materialdata.woehler.loglike import *\n",
     "\n",
     "#data = pd.read_excel(\"C:/Users/\")\n",
     "data = pd.read_excel('../pylife/materialdata/data/Test_dat.xlsx')\n",
@@ -62,9 +63,10 @@
     "\n",
     "# Class WoehlerCurve\n",
     "WC_data = WoehlerCurve(data, ld_cyc_lim, {}, {'k_1': '', '1/TN': '', 'SD_50': '', '1/TS': '', 'ND_50': ''})\n",
-    "\n",
+    "WC_data.calc_woehler_curve_parameters()\n",
     "x = np.log10(WC_data.fractures.loads)\n",
     "y = np.log10(WC_data.fractures.cycles)\n",
+    "bayes_analyzer = BayesAnalyzer()\n",
     "\n",
     "slope_full, intercept_full, r_value, p_value, std_err = stats.linregress(x, y)\n"
    ]
@@ -94,8 +96,8 @@
     "    ndraws = 5000  # number of draws from the distribution\n",
     "    nburn = 1000   # number of \"burn-in points\" (which we'll discard)\n",
     "    \n",
-    "    data_small_fin = ld_lvl_sample(WC_data, data, n_N)\n",
-    "    data_small_inf, data_inf_dict, n_frac = ld_lvl_sample_inf(WC_data, n_N_inf)\n",
+    "    data_small_fin = bayes_analyzer.ld_lvl_sample(WC_data, data, n_N)\n",
+    "    data_small_inf, data_inf_dict, n_frac = bayes_analyzer.ld_lvl_sample_inf(WC_data, n_N_inf)\n",
     "\n",
     "    data_total_x = np.concatenate((data_small_fin['x'], data_small_inf['x']))\n",
     "    data_total_y = np.concatenate((data_small_fin['y'], data_small_inf['y']))\n",
@@ -107,7 +109,7 @@
     "    WC_data_sub = WoehlerCurve(dataset, ld_cyc_lim, {}, \n",
     "                               {'k_1': '', '1/TN': '', 'SD_50': '', '1/TS': '', 'ND_50': ''},\n",
     "                               )\n",
-    "\n",
+    "    WC_data_sub.calc_woehler_curve_parameters()\n",
     "    x_sub = np.log10(WC_data_sub.fractures.loads)\n",
     "    y_sub = np.log10(WC_data_sub.fractures.cycles)\n",
     "    data_small_frac = dict(x=x_sub, y=y_sub)\n",
@@ -116,7 +118,7 @@
     "    \n",
     "#### k    \n",
     "    with pm.Model() as model_robust:\n",
-    "        trace_robust = bayesian_slope_norm(data_dict=data_small_frac, model_name=model_robust, \n",
+    "        trace_robust = bayes_analyzer.bayesian_slope_norm(data_dict=data_small_frac, model_name=model_robust, \n",
     "                                           samples=ndraws, chains=2)\n",
     "\n",
     "    burned_trace_robust = trace_robust[1000:]\n",
@@ -170,7 +172,7 @@
     "                       'Bayes_SD':[trace_quantiles(trace_SD_TS)[0]['SD_50'][50]],\n",
     "                       'Mali_SD':[np.log10(WC_data_sub.Mali_5p_result['SD_50'])],\n",
     "                       'Bayes_TN':[trace_quantiles(burned_trace_TN)[0]['stdev'][50]],\n",
-    "                       'Mali_TN':[WC_data_sub.Mali_5p_result['1/TN']]},fp)\n",
+    "                       'Mali_TN':[WC_data_sub.Mali_5p_result['1/TN']],\n",
     "                       'Bayes_k':-[trace_quantiles(burned_trace_robust)[0]['x'][50]],\n",
     "                       'Mali_k':[WC_data_sub.Mali_5p_result['k_1']]},fp)\n",
     "    else:\n",
@@ -341,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
