--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -65,14 +65,15 @@
     "\n",
     "sys.path.insert(0, os.path.abspath('..'))\n",
     "\n",
-    "from pylife.materialdata.woehler.analyzer import *\n",
-    "from pylife.materialdata.woehler.diagram import *\n",
-    "from pylife.materialdata.woehler.widgets import *"
+    "from pylife.materialdata.woehler.fatigue_data import FatigueData\n",
+    "from pylife.materialdata.woehler.woehler_curve_creator import WoehlerCurveCreator\n",
+    "from pylife.materialdata.woehler.diagram import PlotWoehlerCurve\n",
+    "from pylife.materialdata.woehler.widgets import WoehlerWidget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -177,9 +178,31 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose whether to visualize the head or tail of the data found in excel:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f885a5c9627a49f6bf9d9d3aec399deb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "RadioButtons(description='Visualization:', options=('Head of the data', 'Details of the data'), style=Descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "w = wwidget.data_head_tail()\n",
+    "w = WoehlerWidget.data_head_tail()\n",
     "print('Choose whether to visualize the head or tail of the data found in excel:')\n",
     "w"
    ]
@@ -200,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -209,7 +232,75 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loads</th>\n",
+       "      <th>cycles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>284.39285</td>\n",
+       "      <td>1369000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>284.39285</td>\n",
+       "      <td>10000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>284.39285</td>\n",
+       "      <td>10000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>284.39285</td>\n",
+       "      <td>10000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>284.39285</td>\n",
+       "      <td>10000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       loads    cycles\n",
+       "0  284.39285   1369000\n",
+       "1  284.39285  10000000\n",
+       "2  284.39285  10000000\n",
+       "3  284.39285  10000000\n",
+       "4  284.39285  10000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if w.value == 'Head of the data':\n",
     "    display(data.head())\n",
@@ -232,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -275,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -284,15 +375,30 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f33a9691134d4a31b40d0ad3acc8f860",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(Text(value='', description='k_1'), Text(value='', description='1/TN'), Text(value='', descriptio…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "tab = wwidget.WL_param()\n",
+    "tab = WoehlerWidget.WL_param()\n",
     "display(tab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -301,9 +407,26 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum Likelihood Method:\n",
+      "\n",
+      "Estimated Parameters:\n",
+      "k_1\n",
+      "1/TN\n",
+      "SD_50\n",
+      "1/TS\n",
+      "ND_50\n",
+      "\n",
+      "Fixed Parameters:\n"
+     ]
+    }
+   ],
    "source": [
-    "fixed_param, estim_param =  wwidget.WL_param_display(tab)"
+    "fixed_param, estim_param =  WoehlerWidget.WL_param_display(tab)"
    ]
   },
   {
@@ -320,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -329,12 +452,24 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 18.908399\n",
+      "         Iterations: 514\n",
+      "         Function evaluations: 728\n"
+     ]
+    }
+   ],
    "source": [
     "warnings.filterwarnings('ignore')\n",
     "#pdb.set_trace()\n",
-    "WC_data = WoehlerCurve(data, ld_cyc_lim, fixed_param, estim_param)\n",
-    "WC_data.calc_woehler_curve_parameters()"
+    "fatigue_data = FatigueData(data, ld_cyc_lim)\n",
+    "woehler_curve_creator = WoehlerCurveCreator(fatigue_data)\n",
+    "woehler_curve = woehler_curve_creator.maximum_like_procedure(fixed_param)"
    ]
   },
   {
@@ -353,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -362,12 +497,26 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum Likelihood 5 Param method:\n",
+      "\n",
+      "\u001b[91m\u001b[1mEndurance SD50 = \u001b[1;34m293.5\n",
+      "\u001b[91m\u001b[1mEndurance load-cycle ND50 = \u001b[1;34m1.40e+06\n",
+      "\u001b[91m\u001b[1mDeviation in load direction 1/TS = \u001b[1;34m1.11\n",
+      "\u001b[91m\u001b[1mSlope k = \u001b[1;34m8.66\n",
+      "\u001b[91m\u001b[1mDeviation in load-cycle direction 1/TN = \u001b[1;34m9.86\n"
+     ]
+    }
+   ],
    "source": [
-    "estim_param.update(WC_data.Mali_5p_result)\n",
+    "estim_param.update(woehler_curve.curve_parameters)\n",
     "all(map(estim_param.pop, fixed_param))\n",
     "\n",
-    "wwidget.results_mali_probit(WC_data, fixed_param)"
+    "WoehlerWidget.print_mali_5p_result(woehler_curve, fixed_param)"
    ]
   },
   {
@@ -423,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -440,8 +589,8 @@
     "    amp = 'Amplitude'\n",
     "    ld_typ = 'Stress'\n",
     "    unit = u'$N/mm^2$'\n",
-    "    xlim_WL = (round(min(WC_data.data.cycles)*0.4,-1), round(max(WC_data.data.cycles)*2,-1))\n",
-    "    ylim_WL = (round(min(WC_data.data.loads)*0.8,-1), round(max(WC_data.data.loads)*1.2,-1))\n",
+    "    xlim_WL = (round(min(woehler_curve.fatigue_data.cycles)*0.4,-1), round(max(woehler_curve.fatigue_data.cycles)*2,-1))\n",
+    "    ylim_WL = (round(min(woehler_curve.fatigue_data.loads)*0.8,-1), round(max(woehler_curve.fatigue_data.loads)*1.2,-1))\n",
     "else:\n",
     "    amp, ld_typ, unit, xlim_WL, ylim_WL = 0,0,0,0,0"
    ]
@@ -460,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -469,9 +618,31 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose a plot type and execute the following cell to visualize the results:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71db694fde7c41358595d47fbe06cda2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "RadioButtons(description='Plot Type', options=(('Initial data', 'Initial data'), ('Slope', 'Slope'), ('Pearl c…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "w4 = wwidget.results_visual()\n",
+    "w4 = WoehlerWidget.results_visual()\n",
     "print('Choose a plot type and execute the following cell to visualize the results:')\n",
     "w4"
    ]
@@ -490,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -499,13 +670,26 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'WoehlerCurveWithFixedParams' object has no attribute 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-20fc2f582e85>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Not enough load levels in the infinite-life zone for plotting the probability net\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mPlotWC\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPlotWoehlerCurve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwoehler_curve\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw4\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Mali'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mamp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mld_typ\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0munit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxlim_WL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mylim_WL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\repos\\pylife\\create_3271_refactor\\pylife\\pylife\\materialdata\\woehler\\diagram.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, WoehlerCurve, title, method, amp, ld_typ, unit, xlim_WL, ylim_WL, default_diag)\u001b[0m\n\u001b[0;32m     34\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mu'$N/mm^2$'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m             \u001b[1;31m# Figure xy limits (Woehler curve)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlim_WL\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWoehlerCurve\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcycles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m0.4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWoehlerCurve\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcycles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylim_WL\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWoehlerCurve\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m0.8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWoehlerCurve\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m1.2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'WoehlerCurveWithFixedParams' object has no attribute 'data'"
+     ]
+    }
+   ],
    "source": [
-    "if len(WC_data.ld_lvls_inf[0])<2 and w4.value == \"Probability plot of the infinite zone\":\n",
+    "if len(woehler_curve.fatigue_data.ld_lvls_inf[0])<2 and w4.value == \"Probability plot of the infinite zone\":\n",
     "    print(\"Warning:\\n\")\n",
     "    print(\"Not enough load levels in the infinite-life zone for plotting the probability net\")\n",
     "else:\n",
-    "    PlotWC = PlotWoehlerCurve(WC_data, w4.value, 'Mali', amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
+    "    PlotWC = PlotWoehlerCurve(woehler_curve, w4.value, 'Mali', amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
    ]
   },
   {
@@ -535,8 +719,8 @@
    },
    "outputs": [],
    "source": [
-    "k_1 = WC_data.Mali_5p_result['k_1']\n",
-    "w5 = wwidget.inf_plot(WC_data, k_1)\n",
+    "k_1 = woehler_curve.curve_parameters['k_1']\n",
+    "w5 = WoehlerWidget.inf_plot(woehler_curve, k_1)\n",
     "print('Choose a value for k_2:')\n",
     "w5"
    ]
@@ -568,7 +752,7 @@
    },
    "outputs": [],
    "source": [
-    "w2 = wwidget.method_mali_probit()\n",
+    "w2 = WoehlerWidget.method_mali_probit()\n",
     "w2"
    ]
   },
@@ -585,13 +769,13 @@
    },
    "outputs": [],
    "source": [
-    "if len(WC_data.ld_lvls_inf[0])<2 and w2.value == \"Probit\":\n",
+    "if len(woehler_curve.fatigue_data.ld_lvls_inf[0])<2 and w2.value == \"Probit\":\n",
     "    print(\"Warning:\\n\")\n",
     "    print(\"Not enough load levels in the infinite zone for the probit method, please choose the Mali\")\n",
     "    print(\"\\nparameters for visualization\")\n",
     "else:\n",
-    "    SD50, ND50, TS = PlotWC.runout_zone_method(WC_data, method=w2.value, slope_chosen=w5.value)\n",
-    "    _ = PlotWC.final_curve_plot(WC_data, SD50, ND50, TS, w5.value, w2.value, amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
+    "    SD50, ND50, TS = PlotWC.runout_zone_method(woehler_curve, method=w2.value, slope_chosen=w5.value)\n",
+    "    _ = PlotWC.final_curve_plot(woehler_curve, SD50, ND50, TS, w5.value, w2.value, amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
    ]
   },
   {
@@ -621,10 +805,10 @@
    },
    "outputs": [],
    "source": [
-    "sum_lolli = WC_data.mali_sum_lolli(WC_data.Mali_5p_result['SD_50'], WC_data.Mali_5p_result['1/TS'], \n",
-    "                                        WC_data.Mali_5p_result['k_1'], WC_data.Mali_5p_result['ND_50'], \n",
-    "                                        WC_data.Mali_5p_result['1/TN'], WC_data.fractures,\n",
-    "                                        WC_data.zone_inf, WC_data.load_cycle_limit)\n",
+    "sum_lolli = woehler_curve_creator.mali_sum_lolli(woehler_curve.curve_parameters['SD_50'], woehler_curve.curve_parameters['1/TS'], \n",
+    "                                        woehler_curve.curve_parameters['k_1'], woehler_curve.curve_parameters['ND_50'], \n",
+    "                                        woehler_curve.curve_parameters['1/TN'], woehler_curve.fatigue_data.fractures,\n",
+    "                                        woehler_curve.fatigue_data.zone_inf, woehler_curve.fatigue_data.load_cycle_limit)\n",
     "\n",
     "n_data_pt = data.shape[0]\n",
     "bic = WC_data.bayes_inf_crit(sum_lolli, WC_data.p_opt, n_data_pt)\n",
@@ -712,7 +896,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   },
   "name": "woehler_analyzer.ipynb"
  },
