--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -67,7 +67,8 @@
     "\n",
     "from pylife.materialdata.woehler.fatigue_data import FatigueData\n",
     "from pylife.materialdata.woehler.woehler_curve_creator import WoehlerCurveCreator\n",
-    "from pylife.materialdata.woehler.diagram import PlotWoehlerCurve\n",
+    "from pylife.materialdata.woehler.probability_plot_creator import ProbabilityPlotCreator\n",
+    "from pylife.materialdata.woehler.plot_woehler_curve_data import PlotWoehlerCurveData\n",
     "from pylife.materialdata.woehler.widgets import WoehlerWidget"
    ]
   },
@@ -589,8 +590,8 @@
     "    amp = 'Amplitude'\n",
     "    ld_typ = 'Stress'\n",
     "    unit = u'$N/mm^2$'\n",
-    "    xlim_WL = (round(min(woehler_curve.fatigue_data.cycles)*0.4,-1), round(max(woehler_curve.fatigue_data.cycles)*2,-1))\n",
-    "    ylim_WL = (round(min(woehler_curve.fatigue_data.loads)*0.8,-1), round(max(woehler_curve.fatigue_data.loads)*1.2,-1))\n",
+    "    xlim_WL = (round(min(woehler_curve.fatigue_data.data.cycles)*0.4,-1), round(max(woehler_curve.fatigue_data.data.cycles)*2,-1))\n",
+    "    ylim_WL = (round(min(woehler_curve.fatigue_data.data.loads)*0.8,-1), round(max(woehler_curve.fatigue_data.data.loads)*1.2,-1))\n",
     "else:\n",
     "    amp, ld_typ, unit, xlim_WL, ylim_WL = 0,0,0,0,0"
    ]
@@ -642,7 +643,7 @@
     }
    ],
    "source": [
-    "w4 = WoehlerWidget.results_visual()\n",
+    "w4 = WoehlerWidget.results_visual_woehler_curve()\n",
     "print('Choose a plot type and execute the following cell to visualize the results:')\n",
     "w4"
    ]
@@ -670,26 +671,30 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'WoehlerCurveWithFixedParams' object has no attribute 'data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-20fc2f582e85>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Not enough load levels in the infinite-life zone for plotting the probability net\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mPlotWC\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPlotWoehlerCurve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwoehler_curve\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw4\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Mali'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mamp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mld_typ\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0munit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxlim_WL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mylim_WL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mD:\\repos\\pylife\\create_3271_refactor\\pylife\\pylife\\materialdata\\woehler\\diagram.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, WoehlerCurve, title, method, amp, ld_typ, unit, xlim_WL, ylim_WL, default_diag)\u001b[0m\n\u001b[0;32m     34\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mu'$N/mm^2$'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m             \u001b[1;31m# Figure xy limits (Woehler curve)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlim_WL\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWoehlerCurve\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcycles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m0.4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWoehlerCurve\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcycles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylim_WL\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWoehlerCurve\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m0.8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWoehlerCurve\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m1.2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'WoehlerCurveWithFixedParams' object has no attribute 'data'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if len(woehler_curve.fatigue_data.ld_lvls_inf[0])<2 and w4.value == \"Probability plot of the infinite zone\":\n",
-    "    print(\"Warning:\\n\")\n",
-    "    print(\"Not enough load levels in the infinite-life zone for plotting the probability net\")\n",
-    "else:\n",
-    "    PlotWC = PlotWoehlerCurve(woehler_curve, w4.value, 'Mali', amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
+    "#PlotWC = PlotWoehlerCurveData(woehler_curve, w4.value, 'Mali', amp, ld_typ, unit, xlim_WL, ylim_WL, default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w4 = WoehlerWidget.results_visual_probability_plot()\n",
+    "print('Choose a plot type and execute the following cell to visualize the results:')\n",
+    "w4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#probability_plot_creator = ProbabilityPlotCreator(fatigue_data)\n",
+    "#probability_plot = probability_plot_creator.maximum_like_procedure(fixed_param)"
    ]
   },
   {
