CREATE-3271_refactor: finished probability plotter
Signed-off-by: Gyongyver Kiss <gyongyver.kiss@hu.bosch.com>

--- a/demos/bayes_tool.ipynb
+++ b/demos/bayes_tool.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "from pylife.materialdata.woehler.analyzer import *\n",
     "from pylife.materialdata.woehler.diagram import *\n",
-    "from pylife.materialdata.woehler.widgets import *"
+    "from pylife.materialdata.woehler.woehler_curve_widgets import *"
    ]
   },
   {
