--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -69,7 +69,9 @@
     "from pylife.materialdata.woehler.woehler_curve_creator import WoehlerCurveCreator\n",
     "from pylife.materialdata.woehler.probability_plot_creator import ProbabilityPlotCreator\n",
     "from pylife.materialdata.woehler.plot_woehler_curve_data import PlotWoehlerCurveData\n",
-    "from pylife.materialdata.woehler.widgets import WoehlerWidget"
+    "from pylife.materialdata.woehler.plot_probability_plot_finite import PlotProbabilityPlotFinite\n",
+    "from pylife.materialdata.woehler.plot_probability_plot_infinite import PlotProbabilityPlotInfinite\n",
+    "from pylife.materialdata.woehler.woehler_curve_widgets import WoehlerCurveWidgets"
    ]
   },
   {
@@ -190,7 +192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86219d34b4e54990b1c983e85f0f7ad8",
+       "model_id": "49e3e7dca98e4b7b948983df3dad5e81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +205,8 @@
     }
    ],
    "source": [
-    "w = WoehlerWidget.data_head_tail()\n",
+    "woehler_curve_widgets = WoehlerCurveWidgets()\n",
+    "w = woehler_curve_widgets.data_head_tail()\n",
     "print('Choose whether to visualize the head or tail of the data found in excel:')\n",
     "w"
    ]
@@ -380,7 +383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9dab08696bf47ad87c6eec65727cb0f",
+       "model_id": "5399894293f94a60a07d139de2dcaad6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -393,7 +396,7 @@
     }
    ],
    "source": [
-    "tab = WoehlerWidget.WL_param()\n",
+    "tab = woehler_curve_widgets.WL_param()\n",
     "display(tab)"
    ]
   },
@@ -427,7 +430,7 @@
     }
    ],
    "source": [
-    "fixed_param, estim_param =  WoehlerWidget.WL_param_display(tab)"
+    "fixed_param, estim_param =  woehler_curve_widgets.WL_param_display(tab)"
    ]
   },
   {
@@ -517,7 +520,7 @@
     "estim_param.update(woehler_curve.curve_parameters)\n",
     "all(map(estim_param.pop, fixed_param))\n",
     "\n",
-    "WoehlerWidget.print_mali_5p_result(woehler_curve, fixed_param)"
+    "woehler_curve_widgets.print_mali_5p_result(woehler_curve, fixed_param)"
    ]
   },
   {
@@ -630,7 +633,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce2c3f1555124869a7c830735cd02db8",
+       "model_id": "e338fea9d00545e9b19ab798131156bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -643,7 +646,7 @@
     }
    ],
    "source": [
-    "w4 = WoehlerWidget.results_visual_woehler_curve()\n",
+    "w4 = woehler_curve_widgets.results_visual_woehler_curve()\n",
     "print('Choose a plot type and execute the following cell to visualize the results:')\n",
     "w4"
    ]
@@ -735,7 +738,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c1b2747f65d4418a2059b4eb593cc16",
+       "model_id": "8d97d381625d43e5bd5ea4ea064feeb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -748,7 +751,7 @@
     }
    ],
    "source": [
-    "w4 = WoehlerWidget.results_visual_probability_plot()\n",
+    "w4 = woehler_curve_widgets.results_visual_probability_plot()\n",
     "print('Choose a plot type and execute the following cell to visualize the results:')\n",
     "w4"
    ]
@@ -759,8 +762,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#probability_plot_creator = ProbabilityPlotCreator(fatigue_data)\n",
-    "#probability_plot = probability_plot_creator.maximum_like_procedure(fixed_param)"
+    "probability_plot_creator = ProbabilityPlotCreator(fatigue_data)\n",
+    "finite_probability_plot = probability_plot_creator.probability_plot_finite()\n",
+    "infinite_probability_plot = probability_plot_creator.probability_plot_infinite()\n",
+    "plot_probability_plot_finite = PlotProbabilityPlotFinite(finite_probability_plot)\n",
+    "plot_probability_plot_finite.plot_probability_plot()\n",
+    "plot_probabilty_plot_infinite = PlotProbabilityPlotInfinite(infinite_probability_plot)\n",
+    "plot_probabilty_plot_infinite.plot_probability_plot()"
    ]
   },
   {
@@ -779,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
