CREATE-3271: curve selection radio button change selection event

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -71,7 +71,9 @@
     "from pylife.materialdata.woehler.plot_woehler_curve_data import PlotWoehlerCurveData\n",
     "from pylife.materialdata.woehler.plot_probability_plot_finite import PlotProbabilityPlotFinite\n",
     "from pylife.materialdata.woehler.plot_probability_plot_infinite import PlotProbabilityPlotInfinite\n",
-    "from pylife.materialdata.woehler.woehler_curve_widgets import WoehlerCurveWidgets"
+    "from pylife.materialdata.woehler.woehler_curve_widgets import WoehlerCurveWidgets\n",
+    "from pylife.materialdata.woehler.radio_button_file_display import RadioButtonFileDisplay\n",
+    "from pylife.materialdata.woehler.woehler_curve_data_plotter import  WoehlerCurveDataPlotter"
    ]
   },
   {
@@ -124,7 +126,7 @@
    },
    "outputs": [],
    "source": [
-    "file_name = 'woehler-test-data.csv'"
+    "file_name = 'woehler-test-data.csv'\n"
    ]
   },
   {
@@ -153,7 +155,8 @@
    "outputs": [],
    "source": [
     "data = pd.read_csv(file_name, sep='\\t')\n",
-    "data.columns=['loads', 'cycles']"
+    "data.columns=['loads', 'cycles']\n",
+    "rb = RadioButtonFileDisplay(['Head of the data', 'Details of the data'], 'File display selection', data)"
    ]
   },
   {
@@ -168,148 +171,6 @@
     "##### For automization purposes\n",
     "data = pd.read_excel('../data/Test_dat.xlsx')\n",
     "data.columns=['loads', 'cycles']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Choose whether to visualize the head or tail of the data found in excel:\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49e3e7dca98e4b7b948983df3dad5e81",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='Visualization:', options=('Head of the data', 'Details of the data'), style=Descript…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "woehler_curve_widgets = WoehlerCurveWidgets()\n",
-    "w = woehler_curve_widgets.data_head_tail()\n",
-    "print('Choose whether to visualize the head or tail of the data found in excel:')\n",
-    "w"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "##### Visualization of the data:\n",
-    "* It is possible to go back and pick the other choice \n",
-    "* Rerun this cell to see it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>loads</th>\n",
-       "      <th>cycles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>284.39285</td>\n",
-       "      <td>1369000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>284.39285</td>\n",
-       "      <td>10000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>284.39285</td>\n",
-       "      <td>10000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>284.39285</td>\n",
-       "      <td>10000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>284.39285</td>\n",
-       "      <td>10000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       loads    cycles\n",
-       "0  284.39285   1369000\n",
-       "1  284.39285  10000000\n",
-       "2  284.39285  10000000\n",
-       "3  284.39285  10000000\n",
-       "4  284.39285  10000000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "if w.value == 'Head of the data':\n",
-    "    display(data.head())\n",
-    "else: \n",
-    "    display(data.describe())"
    ]
   },
   {
@@ -396,6 +257,7 @@
     }
    ],
    "source": [
+    "woehler_curve_widgets = WoehlerCurveWidgets()\n",
     "tab = woehler_curve_widgets.WL_param()\n",
     "display(tab)"
    ]
@@ -442,7 +304,7 @@
     }
    },
    "source": [
-    "#### 4. Variable definition of class WoehlerCurve: (Variable name = WC_data)"
+    "#### 4. Variable definition of class WoehlerCurve:"
    ]
   },
   {
@@ -577,26 +439,10 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "default = 0\n",
-    "\n",
-    "if default == 0:\n",
-    "    amp = 'Amplitude'\n",
-    "    ld_typ = 'Stress'\n",
-    "    unit = u'$N/mm^2$'\n",
-    "    xlim_WL = (round(min(woehler_curve.fatigue_data.data.cycles)*0.4,-1), round(max(woehler_curve.fatigue_data.data.cycles)*2,-1))\n",
-    "    ylim_WL = (round(min(woehler_curve.fatigue_data.data.loads)*0.8,-1), round(max(woehler_curve.fatigue_data.data.loads)*1.2,-1))\n",
-    "else:\n",
-    "    amp, ld_typ, unit, xlim_WL, ylim_WL = 0,0,0,0,0"
+    "woehler_curve_data_plotter = WoehlerCurveDataPlotter(woehler_curve)\n"
    ]
   },
   {
@@ -609,106 +455,6 @@
    },
    "source": [
     "#### 6. Choose the plot type to be visualized in the following cell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Choose a plot type and execute the following cell to visualize the results:\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e338fea9d00545e9b19ab798131156bf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='Plot Type', options=(('Initial data', 'Initial data'), ('Slope', 'Slope'), ('Pearl c…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "w4 = woehler_curve_widgets.results_visual_woehler_curve()\n",
-    "print('Choose a plot type and execute the following cell to visualize the results:')\n",
-    "w4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "##### Note: It is possible to go back and pick another choice. Rerun the following cell to see it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "PlotWC = PlotWoehlerCurveData(woehler_curve)\n",
-    "PlotWC.plot_woehler_curve().plot_basic_fatigue_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pdb.set_trace()\n",
-    "PlotWC = PlotWoehlerCurveData(woehler_curve)\n",
-    "PlotWC.plot_woehler_curve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PlotWC = PlotWoehlerCurveData(woehler_curve)\n",
-    "PlotWC.plot_pearl_chain_method()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PlotWC = PlotWoehlerCurveData(woehler_curve)\n",
-    "PlotWC.plot_deviation().plot_woehler_curve()"
    ]
   },
   {
@@ -758,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
